# projects-monorepo

./: .gitignore  LICENSE  README.md
go_mini_fs/: app.go  (+2 more)
ml-onnx/: .gitignore  Cargo.toml  README.md  benchmark_inference.py  benchmark_inference_full.py  model_inference.py  onnx_inference.py  pytorch_classification_models_data.csv  pytorch_inference.py  requirements.txt  scraper.py  tune.py  tune_model.py
ml-onnx/articles/: a1_tuning_and_onnx.md  a2_pytorch_onnx_rust_benchmarks.md  a3_profiling_in_python_and_rust.md  a4_analysis_of_pytorch_models.md  a5_analysis_of_pytorch_models.md
ml-onnx/articles/media/: pytorch_classification_models_data.csv  pytorch_models_data.csv  pytorch_object_models_data.csv  pytorch_quantized_classification_models_data.csv  pytorch_segmentation_models_data.csv  pytorch_video_models_data.csv
ml-onnx/data/benchmarks/: RegNet_x_400mf_benchmark_batch.csv  RegNet_x_400mf_benchmark_batch.json  RegNet_x_400mf_benchmark_batch_full.csv  RegNet_x_400mf_benchmark_batch_full.json  RegNet_y_16gf_benchmark_batch.json  RegNet_y_16gf_benchmark_batch_full.json  RegNet_y_16gf_benchmark_batch_rs.csv  RegNet_y_16gf_benchmark_batch_rs_full.csv  benchmark_batch.csv  benchmark_batch_full.csv  benchmark_batch_full.json  benchmark_batch_rs.csv  benchmark_batch_rs_full.csv
ml-onnx/data/benchmarks_v1/: RegNet_x_400mf_benchmark_batch_rs_1.csv  RegNet_x_400mf_benchmark_batch_rs_full.csv  (+2 more)
ml-onnx/scripts/: create_plots.py  create_plots_hyperfine.py  create_python_torch_v_onnx_inf_plot.py  models_data_scraper.py  system_info.py
ml-onnx/src/: common.rs  main.rs
(+40 files in other folders)
