[package]
name = "onnx-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
# ONNX Runtime
ort = "=2.0.0-rc.10"
# ort = "1.16.3"

# Image processing
image = { version = "0.24", features = ["png", "jpeg"] }

# Array operations
ndarray = "0.16.1"

# JSON handling
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Async runtime (required by ort)
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
# For testing
criterion = "0.5"

# [[bench]]
# name = "inference_benchmark"
# harness = false
